# TrinityRs

./: Cargo.toml  build.rs  minimal_example.spv
pikachu/: pm0025_00_00.trmbf  pm0025_00_00.trmdl  pm0025_00_00.trmmt  pm0025_00_00.trmsh  pm0025_00_00.trmtr  pm0025_00_00.trpokecfg  pm0025_00_00.trskl  pm0025_00_00_00000_defaultwait01_loop.tracm  pm0025_00_00_00000_defaultwait01_loop.tranm  pm0025_00_00_00010_defaultidle01.traef  pm0025_00_00_00010_defaultidle01.tranm  pm0025_00_00_00011_defaultidle02.tracm  pm0025_00_00_00011_defaultidle02.traef  pm0025_00_00_00011_defaultidle02.tranm  pm0025_00_00_00021_turn_r090.tracm  pm0025_00_00_00021_turn_r090.tranm  pm0025_00_00_00024_turn_l090.tracm  pm0025_00_00_00024_turn_l090.tranm  pm0025_00_00_00030_walk01_loop.tranm  pm0025_00_00_00100_run01_loop.tranm  pm0025_00_00_00145_stepout01_start.tranm  pm0025_00_00_00146_stepout01.tranm  pm0025_00_00_00147_stepout01_end.tracm  pm0025_00_00_00147_stepout01_end.tranm  pm0025_00_00_00150_jumpup01_start.tranm  pm0025_00_00_00151_jumpup01_loop.tranm  pm0025_00_00_00152_jumpdown01_start.tranm  pm0025_00_00_00153_jumpdown01_loop.tracm  pm0025_00_00_00153_jumpdown01_loop.tranm  pm0025_00_00_00155_land02.tracm  pm0025_00_00_00155_land02.traef  pm0025_00_00_00155_land02.tranm  pm0025_00_00_00270_rest01_start.tracm  pm0025_00_00_00270_rest01_start.traef  pm0025_00_00_00270_rest01_start.tranm  pm0025_00_00_00271_rest01_loop.tracm  pm0025_00_00_00271_rest01_loop.tranm  pm0025_00_00_00272_rest01_end.tracm  pm0025_00_00_00272_rest01_end.traef  pm0025_00_00_00272_rest01_end.tranm  (+163 more)
pikachu/locators/: pm0025_00_00_00000_eff.trskl  pm0025_00_00_10000_eff.trskl
shaders/: fragment.glsl  pokemon_pos3_nrm4_tng4_uv2_col4_idx4_wgt4.glsl  pokemon_pos3_nrm4_tng4_uv2_idx4_wgt4.glsl  standard.fs.glsl  standard.fs.spv  standard.vs.glsl  standard.vs.spv  vertex.glsl
src/: main.rs
src/io/: mod.rs  model.rs
src/io/flatbuffers/: jewelloc_generated.rs  mod.rs  trbsm_generated.rs  trltt_generated.rs  trmbf_generated.rs  trmdl_generated.rs  trmmt_generated.rs  trmsh_generated.rs  trmtr_generated.rs  trpokecfg_generated.rs  trskl_generated.rs
src/rendering/: graph.rs  mod.rs  pipeline.rs  renderer.rs  renderer_utils.rs  shaders.rs  texture_manager.rs
