[package]
name = "trinity-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# io
flatbuffers = "23.5.26"

# rendering
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git" }
winit = "0.28.3"
png = "0.17.10"
